# summarizer

./: .gitignore  README.md  dapr.yaml
summarizer/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
summarizer/data/scenes/: 10m_sample2_scenes.json  10m_scenes.json  1m_sample1_scenes.json  1m_sample2_scenes.json  5m_sample1_scenes.json
summarizer/data/summaries/: 10m_episode_summary.json  10m_sample2_episode_summary.json  10m_sample2_scenes_summaries.json  10m_scenes_summaries.json  1m_sample1_episode_summary.json  1m_sample1_scenes_summaries.json  1m_sample2_episode_summary.json  1m_sample2_scenes_summaries.json  campaign_summary.json
summarizer/data/transcriptions/: 10m_diarized.json  10m_raw.json  10m_sample2_diarized.json  1h.json  1h_az.json  1m_diarized.json  1m_raw.json  1m_sample1.json  1m_sample1_diarized.json  1m_sample2.json  1m_sample2_diarized.json  5m_sample1.json  5m_sample1_diarized.json
summarizer/src/summarizer/: __main__.py  api.py  config.py  container.py  main.py
summarizer/src/summarizer/models/: scene.py  sentence.py  workflow.py
summarizer/src/summarizer/repositories/: __init__.py  dapr_storage.py  storage.py
summarizer/src/summarizer/services/: __init__.py
summarizer/src/summarizer/services/knowledge_graph/: __init__.py  knowledge_graph.py
summarizer/src/summarizer/services/knowledge_graph/lightrag/: lightrag.py
summarizer/src/summarizer/services/knowledge_graph/models/: __init__.py  insert_response.py
summarizer/src/summarizer/services/speech_to_text/: __init__.py  speakers_recognition.py  speech_to_text.py  speech_to_text_service.py  whisper.py
summarizer/src/summarizer/services/speech_to_text/transcription/: __init__.py  azure_openai_transcriber.py  local_whisper_transcriber.py  transcriber.py
summarizer/src/summarizer/services/summaries/: summarizer.py
summarizer/src/summarizer/services/summaries/agents/: campaign.yaml  (+2 more)
summarizer/src/summarizer/services/transformers/: __init__.py  group_into_scenes.py  scene_chunker.py
summarizer/src/summarizer/utils/: __init__.py  azure_completion_provider.py  naming.py  telemetry.py
summarizer/src/summarizer/workflows/: audio_to_summary.py  runtime.py  summarize_new_episode.py
summarizer/tests/: README.md  conftest.py  test_api_unit.py  test_knowledge_graph.py  test_service_speech_to_text.py  test_service_speech_to_text_whisper.py  test_service_summarizer.py  test_service_transformers.py  test_workflow_audio_to_summary.py  test_workflow_transcript_to_summary.py
summarizer/tests/utils/: dapr.py  json.py
(+36 files in other folders)
